--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
       }
     },
     "require": {
+      "php": ">=5.5.9",
       "illuminate/container": "5.1.*",
-      "illuminate/support": "5.1.*"
+      "illuminate/support": "5.1.*",
+      "illuminate/database": "5.1.*",
+      "illuminate/events": "5.1.*"
     }
 }
